Added style for img.flow on /articles/tools-of-the-trade.

--- a/local/views/local.sass
+++ b/local/views/local.sass
@@ -15,3 +15,8 @@ a.button
   text-decoration: none
   &:hover
     background-color: $primary - #111
+
+img.flow
+  float: right
+  margin-bottom: 0.5em
+  margin-left: 1em
