Changed the ul#menu id back to a class.

--- a/views/master.sass
+++ b/views/master.sass
@@ -222,7 +222,7 @@ div#sidebar
   h2
     @include adjust-font-size(1, 1.35, 0.6)
     font-weight: bold
-  ul#menu
+  ul.menu
     list-style: none
 
   div.feed,
