Added projects to the sidebar.

--- a/local/views/local.sass
+++ b/local/views/local.sass
@@ -20,3 +20,8 @@ img.flow
   float: right
   margin-bottom: 0.5em
   margin-left: 1em
+
+div#sidebar
+  a.github
+    padding: 6px 30px 6px 0
+    background: url(/local/images/github-icon.png) no-repeat right center
