Fixed link to Nesta. Added link to /projects.

--- a/local/views/categories.haml
+++ b/local/views/categories.haml
@@ -1,7 +1,9 @@
 %h2 Projects
 %ul.menu
   %li
-    %a{ :href => "/projects/nesta" } Nesta CMS
+    %a{ :href => "/nesta" } Nesta CMS
+  %li
+    %a{ :href => "/projects" } Recent software
   %li
     %a{ :href => "http://github.com/gma", :class => "github" } My github page
 
