--- a/local/views/about.haml
+++ b/local/views/about.haml
@@ -1,11 +1,13 @@
 %h2 About Effectif
 
-:markdown
-  Effectif Development is the home of
-  [Graham Ashton](http://grahamashton.net), a freelance web developer and
-  software engineer based in London.
+.bio
+  :markdown
+    Effectif is the home of Graham Ashton, a freelance developer living in
+    London.
 
-  If you're interested in hiring me for some freelancing work, you can reach
-  me at [graham@effectif.com](mailto:graham@effectif.com).
+    I'm currently available for small jobs; if you're interested
+    [get in touch](mailto:graham@effectif.com).
 
-  You can follow me on twitter [here](http://twitter.com/grahamashton).
+%p
+  %a{ :href => "http://www.twitter.com/grahamashton" }
+    %img{ :src => "http://twitter-badges.s3.amazonaws.com/follow_me-b.png", :alt => "Follow grahamashton on Twitter" }
