Linked to grahamashton.net from sidebar.

--- a/local/views/sidebar.haml
+++ b/local/views/sidebar.haml
@@ -15,8 +15,8 @@
 
   .bio
     :markdown
-      Effectif is the home of Graham Ashton, a freelance developer living in
-      London.
+      Effectif is the home of [Graham Ashton](http://grahamashton.net),
+      a freelance developer living in London.
 
       I'm currently available for small jobs; if you're interested
       [get in touch](mailto:graham@effectif.com).
