--- a/local/views/sidebar.haml
+++ b/local/views/sidebar.haml
@@ -23,6 +23,6 @@
 
   %p
     %a{ :href => "http://www.twitter.com/grahamashton" }
-      %img{ :src => "http://twitter-badges.s3.amazonaws.com/follow_me-b.png", :alt => "Follow grahamashton on Twitter" }
+      %img{ :src => "http://twitter-badges.s3.amazonaws.com/follow_me-c.png", :alt => "Follow grahamashton on Twitter" }
 
   = haml :social, :layout => false
