Fixed border radius on download buttons.

--- a/local/views/local.sass
+++ b/local/views/local.sass
@@ -4,8 +4,8 @@ p.buttons
   margin: 1.5em 0
 
 a.button
-  -webkit-boder-radius: 14px
-  -moz-boder-radius: 14px
+  -webkit-border-radius: 14px
+  -moz-border-radius: 14px
   border-radius: 14px
   padding: 5px 14px 6px
   background: #303b47 url(/local/images/glass-button.png) repeat-x 0 50%
