Styled up lists of browser toolbar buttons.

--- a/local/views/local.sass
+++ b/local/views/local.sass
@@ -16,6 +16,26 @@ a.button
   &:hover
     background-color: $primary - #111
 
+div#content
+  ul.browser-toolbar
+    margin-left: 0
+    padding: 0.7em 1em
+    background: #A8A8A8
+
+    list-style: none
+
+    li
+      display: inline
+      margin-right: 10em
+
+      font-size: 85%
+      font-weight: bold
+      img
+        margin: 0
+        padding: 0
+
+        vertical-align: middle
+
 img.flow
   float: right
   margin-bottom: 0.5em
