Added link to Quiz the Market.

--- a/local/views/sidebar.haml
+++ b/local/views/sidebar.haml
@@ -4,6 +4,8 @@
     %li
       %a{ :href => "/nesta" } Nesta CMS
     %li
+      %a{ :href => "http://www.quizthemarket.com" } Quiz the Market
+    %li
       %a{ :href => "/projects" } Recent software
     %li
       %a{ :href => "http://github.com/gma", :class => "github" } My github page
